feat: Tree component

--- a/src/app/shared/garden/branch/branch.component.html
+++ b/src/app/shared/garden/branch/branch.component.html
@@ -1,4 +1,4 @@
-<div class="branch">
+<div #branchRef class="branch">
   <app-flower emoji="🌸"></app-flower>
   <app-flower emoji="🌻"></app-flower>
   <app-flower emoji="🌼"></app-flower>
