feat: Notes branches

--- a/src/app/shared/garden/tree/tree.component.html
+++ b/src/app/shared/garden/tree/tree.component.html
@@ -1,5 +1,3 @@
 <div class="tree">
-  <app-branch></app-branch>
-  <app-branch></app-branch>
-  <app-branch></app-branch>
+  <app-decision-node [node]="rootNode"></app-decision-node>
 </div>
