feat: added notes

--- a/src/app/shared/concepts/decision-node/decision-node.component.html
+++ b/src/app/shared/concepts/decision-node/decision-node.component.html
@@ -14,7 +14,7 @@
     </svg>
   }
 
-  <div class="node" #nodeRef>
+  <div class="node" #nodeRef (click)="isLeaf() && onLeafSelected()">
     {{ node.note }}
   </div>
 
