feat: nodes color to green

--- a/src/app/shared/concepts/decision-node/decision-node.component.scss
+++ b/src/app/shared/concepts/decision-node/decision-node.component.scss
@@ -15,8 +15,8 @@
 .node {
   position: relative;
   z-index: 1;
-  background-color: #fff3cd;
-  border: 2px solid #ffeeba;
+  background-color: #d4edda;
+  border: 2px solid #c3e6cb;
   border-radius: 8px;
   padding: 10px 20px;
   margin: 12px auto;
