feat: simplified. responsabilities separated.

--- a/src/app/shared/components/decision-node/decision-node.component.html
+++ b/src/app/shared/components/decision-node/decision-node.component.html
@@ -1,28 +1,11 @@
-<div class="decision-node-wrapper" #container>
-  @if (node.children?.length) {
-    <svg class="connector">
-      @for (child of childCoords; track child.x) {
-        <line
-          [attr.x1]="selfCoord.x"
-          [attr.y1]="selfCoord.y"
-          [attr.x2]="child.x"
-          [attr.y2]="child.y"
-          stroke="black"
-          stroke-width="2"
-        />
-      }
-    </svg>
-  }
-
   <div class="node" #nodeRef (click)="isLeaf() && onLeafSelected()">
     {{ node.note }}
   </div>
 
   @if (node.children?.length) {
     <div class="children">
-      @for (child of node.children; track child.id) {
+      @for (child of musicalChildren; track child.id) {
         <app-decision-node [node]="child" (sendToTrunk)="this.listenChildren($event)"></app-decision-node>
       }
     </div>
   }
-</div>
