--- a/src/app/shared/components/tree/tree.component.html
+++ b/src/app/shared/components/tree/tree.component.html
@@ -1,8 +1,3 @@
 <div class="tree">
-  <app-decision-node [node]="rootNode" (sendToTrunk)="addToTrunk($event)"></app-decision-node>
+  <app-decision-node [node]="rootNode"></app-decision-node>
 </div>
-
-<div class="tree">
-  <app-decision-node [node]="trunkNodes"></app-decision-node>
-</div>
-
